--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     },
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
+        "ffmpeg-static": "^5.2.0",
         "shouw.js": "github:shouwjs/shouw.js",
         "typescript": "^5.8.3"
     },
     "dependencies": {
         "@discord-player/extractor": "^7.1.0",
         "discord-player": "^7.1.0",
-        "discord-player-youtubei": "^1.4.6",
-        "ffmpeg-static": "^5.2.0"
+        "discord-player-youtubei": "^1.4.6"
     },
     "repository": {
         "type": "git",
